# Projects

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/numbers/: CMakeLists.txt  bindec.cpp  bindec.h  fibonacci.cpp  fibonacci.h  mortgage.cpp  mortgage.h
tests/: CMakeLists.txt  tests-main.cpp
tests/numbers/: CMakeLists.txt  fibonacci-tests.cpp  mortgage-tests.cpp
